--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dalia - Main Portfolio</title>
+  <title>Dalia Aly's Portfolio</title>
   <script src="js/script.js" defer></script>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <body>
   <header>
     <nav>
       <!-- This is a placeholder for the logo -->
-      <a href="#home" class="logo">Dalia's Logo</a>
+      <!-- <a href="#home" class="logo">
+        <img src="./assets/img/logo1.png" alt="Dalia's Logo" />
+      </a> -->
       <ul>
+        <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
+        <li><a href="#webProjects">Web</a></li>
+        <li><a href="#archProjects">Architecture</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -25,73 +30,74 @@
   <!-- Landing Page Section -->
   <section id="home" class="page landing-page">
     <div class="content">
-      <h1>Welcome to Dalia's Portfolio</h1>
-      <p>Discover my projects and get to know me.</p>
+      <img src="./assets/img/logo.png" alt="Dalia's Logo" class="content--image" />
+      <h1>Welcome to my portfolio</h1>
+      <p>Discover my projects and get to know me</p>
     </div>
     <div class="social-media-icons">
-      <!-- Placeholder links for social media icons -->
-      <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
-      <a href="https://github.com/yourusername" target="_blank">GitHub</a>
-      <a href="https://twitter.com/yourusername" target="_blank">Twitter</a>
+      <!-- social media icons & links -->
+      <a href="https://www.linkedin.com/in/dalia-aly-157b6b25b/" target="_blank">
+        <i class="fab fa-linkedin 3x"></i>
+      </a>
+      <a href="https://github.com/dalia3aly" target="_blank">
+        <i class="fab fa-github fa-3x"></i>
+      </a>
     </div>
   </section>
 
   <!-- About Me Section -->
   <section id="about" class="page section--about">
     <h2>About Me</h2>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex officia
-      numquam vero possimus consequuntur reiciendis, laborum voluptas
-      molestias quaerat dignissimos quia? Dignissimos id possimus rerum unde
-      ab dicta esse quam.
+    <p class="solid">
+      I'm Dalia, a professional with a rich and mixed
+      background in Architecture and Software Engineering. 
     </p>
+    <p>
+        Architecture taught me the beauty of
+        design, the importance of a solid foundation, and the technicalities of
+        bringing complex projects to life. From conceptual sketches to detailed
+        plans, every step in creating a structure mirrored the process of
+        solving real-world problems with elegance and efficiency. This
+        experience instilled in me a deep appreciation for meticulous planning,
+        innovative design solutions, and the relentless pursuit of excellence in my new career in Software Engineering.
+      </p>
 
     <!-- Portfolio Cards -->
-    <div class="portfolio-cards">
+    <div class="portfolios-button">
       <!-- Web Development Portfolio Card -->
-      <div class="card web-development">
-        <a href="URL_TO_YOUR_WEB_DEVELOPMENT_PORTFOLIO" target="_blank">
-          <img src="" alt="Web Development Portfolio" />
-          <div class="card-content">
-            <h3>Web Development Portfolio</h3>
-            <p>Check out my coding projects and applications.</p>
-          </div>
-        </a>
+      <div class="card portfolio--card">
+          <a href="#webProjects">
+              <div class="card-content">
+                  <img src="assets/img/web-card.png" alt="Web Development Portfolio" />
+                  <h3>Web Development Portfolio</h3>
+              </div>
+          </a>
       </div>
-    </div>
-
-    <!-- Architecture Portfolio Card -->
-    <div class="card architecture">
-      <a href="URL_TO_YOUR_ARCHITECTURE_PORTFOLIO" target="_blank">
-        <img src="" alt="Architecture Portfolio" />
-        <div class="card-content">
-          <h3>Architecture Portfolio</h3>
-          <p>Discover my architectural designs and projects.</p>
-        </div>
-      </a>
-    </div>
+  
+      <!-- Architecture Portfolio Card -->
+      <div class="card portfolio--card">
+          <a href="#archProjects">
+              <div class="card-content">
+                  <img src="assets/img/AR.png" alt="Architecture Portfolio" />
+                  <h3>Architecture Portfolio</h3>
+              </div>
+          </a>
+      </div>
+  </div>
   </section>
 
   <!-- Web Development Portfolio Section (will fetch data from JSON files later)-->
   <section id="webProjects" class="page section--projects">
-    <h2>My Web Development Projects</h2>
+    <h2>Web Development Projects</h2>
     <div class="projects-grid">
-      <div class="project-item">
-        <div class="project-info">
-        </div>
-      </div>
-
-      <!-- Project 2 -->
-      <div class="project-item">
-        <div class="project-info">
-
-        </div>
-      </div>
+      
+      <!-- Projects grid will dynamically fill this area -->
+      
     </div>
   </section>
 
   <!-- Architecture Portfolio Section (will fetch data from JSON files later)-->
-  <section id="archProjects" class="page projects-section">
+  <section id="archProjects" class="page section--projects">
     <h2>Architecture Projects</h2>
     <div class="projects-grid">
       <!-- Project 1 -->
@@ -121,8 +127,8 @@
       Feel free to reach out if you have any questions or just want to chat!
     </p>
 
-    <!-- Contact Form - Formspree -->
-    <form action="https://formspree.io/f/{form_id}" method="POST" class="contact-form">
+    <!-- Contact Form by Formspree directed to my email -->
+    <form action="https://formspree.io/f/xbjnajjr" method="POST" class="contact-form">
       <div class="form-group">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" placeholder="Your Name" required />
@@ -141,6 +147,11 @@
       <button type="submit">Send Message</button>
     </form>
   </section>
+
+  <footer>
+    <p>&copy; 2024 Dalia's Portfolio</p>
+  </footer>
+
 </body>
 
 </html>
