--- a/project-detail.html
+++ b/project-detail.html
@@ -9,9 +9,15 @@
 </head>
 <body>
     
-    <div id="project-details" class="page section--projects">
+    <!-- <div id="project-details" class="page section--projects project-container"> -->
+        <div id="project-details" class="page section--projects project-container">
+
+        </div>
         <!-- Dynamic project details will be inserted here -->
-        <div class="projects-grid">
+        <!-- <div class="portfolios-grid"> -->
+            <div class="project-details-grid">
+
+            </div>
 
         </div>
     </div>
