Added - Arch projects

--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
 <body>
   <header>
     <nav>
-      <!-- This is a placeholder for the logo -->
-      <!-- <a href="#home" class="logo">
-        <img src="./assets/img/logo1.png" alt="Dalia's Logo" />
-      </a> -->
       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
@@ -101,23 +97,9 @@
   <section id="archProjects" class="page section--projects">
     <h2>Architecture Projects</h2>
     <div class="projects-grid">
-      <!-- Project 1 -->
-      <div class="project-item">
-        <div class="project-info">
-          <h3>Project 1 Title</h3>
-          <p>Short description of Project 1.</p>
-        </div>
-        </a>
-      </div>
 
-      <!-- Project 2 -->
-      <div class="project-item">
-        <div class="project-info">
-          <h3>Project 2 Title</h3>
-          <p>Short description of Project 2.</p>
-        </div>
-        </a>
-      </div>
+      <!-- Projects grid will dynamically fill this area -->
+
     </div>
   </section>
 
