--- a/project-detail.html
+++ b/project-detail.html
@@ -8,19 +8,18 @@
     <script src="js/projectDetails.js"></script>
 </head>
 <body>
-    
+
     <!-- <div id="project-details" class="page section--projects project-container"> -->
         <div id="project-details" class="page section--projects project-container">
 
-        </div>
-        <!-- Dynamic project details will be inserted here -->
-        <!-- <div class="portfolios-grid"> -->
-            <div class="project-details-grid">
-
             </div>
-
+            <!-- Dynamic project details will be inserted here -->
+            <!-- <div class="portfolios-grid"> -->
+                <div class="project-details-grid">
+                    <!--app/project images-->
+                </div>
+            </div>
         </div>
-    </div>
 
     <footer>
         <p>&copy; 2024 Dalia's Portfolio</p>
