--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Dalia Aly's Portfolio</title>
   <script src="js/script.js" defer></script>
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
